Asset/css/re1_1.css
/*For Timing*/

.times {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 10px;
  }
  .time {
    font-size: 14px;
    width: fit-content;
    padding: 7px 14px;
    background: rgb(233, 233, 233);
    border-radius: 2mm;
    cursor: pointer;
  }
  .timings input:checked + label {
    background: rgb(28, 185, 120);
    color: white;
  }

/*Table css*/
.table-container{
    margin: 3% 10%;
    border: 2px solid;
    width: auto;
    height: 1190px;
    border-color:#000;
    background-color: #fff;
}
.ent{
        text-align: center;
        border: 2px dotted #000;
        border-top: 0px;
        margin: 0% auto;
        width: 15%;
}
.r1c1s{
    display: flex;
    flex-direction: row;
}
.r1c2s{
    display: flex;
    flex-direction: row;
}
/*For row1 table*/
.r1{
    border: 1px solid black;
    display: inline-flex;
    flex-direction:row;
    width: 100%;
    height: 35%;
}
.r1c1{
    padding: 4%;
    margin: 2%;
    width: 36%;
    height: auto;
}
.r1wall{
    margin-bottom: 2%;
    margin-left: 22%;
    border-left: 1px solid #000;
    border-bottom: 1px solid #000;
    border-bottom-left-radius: 30px;
    background-color: #802E12;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23732307' fill-opacity='0.6'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
    width: 38.6%;
    margin-top: -3.7%;
    height: 100%;
}
.wall1{
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 45% 40%;
    -webkit-text-stroke-width: 1px;
    font-family:Arial, Helvetica, sans-serif;
  -webkit-text-stroke-color: rgb(8, 8, 8);
    color: rgb(223, 162, 83);
    font-size: 40px;
}
.r1c1s1{
    margin-left: 14%;
   width: 50px;
   height: 40px; 
}
.r1c1s2{
    margin-left: 37%;
    width: 50px;
    height: 40px; 
}
.r1table1{
    display: grid;
    align-content: space-evenly;
    justify-content: space-evenly;
    margin: 2%;
    border-radius: 50px;
    border: 1px solid #000;
    height: 75%;
    width: 95%;
}
.r1c1s3{
    margin-left: 14%;
    width: 50px;
    height: 40px; 
}
.r1c1s4{
    margin-left: 37%;
    width: 50px;
    height: 40px; 
}
/*For row2 column1 table*/
.r2{
    border: 1px solid black;
    width: auto;
    height: 30%;
    display: flex;
    flex-direction: row;
    padding: 1%;
}
.r2c1{
    margin: 2%;
    width: 34%;
}
.r2c2{
    padding: 2%;
    display: flex;
    flex-direction:column;
    margin: 3%;
    margin-left: 21%;
    width: 36%;
    height: auto;    
}
.r2c1s1{
    margin-left: 21%;
   width: 50px;
   height: 40px; 
}
.r2c1s2{
    margin-left: 29.2%;
    width: 50px;
    height: 40px; 
}
.r2table1{
    display: grid;
    align-content: space-evenly;
    justify-content: space-evenly;
    margin: 1% 10%;
    border-radius: 50px;
    border: 1px solid #000;
    height: 73%;
    width: 80%;
}
.r2c1s3{
    margin-top: 1%;
    margin-left: 21%;
    width: 50px;
    height: 40px; 
}
.r2c1s4{
    margin-left: 29.2%;
    width: 50px;
    height: 40px; 
}
/*For row2 column2 table*/
.r2c2s1{
    margin-left: 42%;
    width: 50px;
    height: 40px; 
}
.r2table2{
    display: grid;
    align-content: space-evenly;
    justify-content: space-evenly;
    margin: 3%;
    margin-left: 25%;
    border-radius: 90px;
    border: 1px solid #000;
    height: 100px;
    width: 50%;
}
.r2c2s2{
    margin-left: 42%;
    width: 50px;
    height: 40px; 
}
/*For row3 table*/
.r3{
    margin-top: 8%;
    display: flex;
    flex-direction: row;
    width: auto;
    height: 58%;
}
.r3c1{
    padding: 4%;
    margin: 2%;
    width: 36%;
    height: auto;
}
.r3c1s1{
    margin-left: 14%;
   width: 50px;
   height: 40px; 
}
.r3c1s2{
    margin-left: 37%;
    width: 50px;
    height: 40px; 
}
.r3table1{
    display: grid;
    align-content: space-evenly;
    justify-content: space-evenly;
    margin: 2%;
    border-radius: 50px;
    border: 1px solid #000;
    height:115%;
    width: 95%;
}
.r3c1s3{
    margin-left: 14%;
    width: 50px;
    height: 40px; 
}
.r3c1s4{
    margin-left: 37%;
    width: 50px;
    height: 40px; 
}
.r3c2{
    padding-top: 4%;
    padding-left: 4%;
    border-top: 1px dashed #000;
    border-left: 1px dashed #000;
    display: flex;
    flex-direction:column;
    margin: 2% 0%;
    margin-left: 25%;
    width: 35%;
    height: 51.5%;    
}
.recep{
    width: 100%;
    height: 200%;
    display: grid;
    justify-content: center;
    align-items: center;
    border-top: 1px dashed #000;
    border-left: 1px dashed #000;
    display: grid;
}

